# human-readable

./: .cookiecutter.json  .flake8  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.rst  README.md  README.rst  mypy.ini  noxfile.py  pyproject.toml
.github/workflows/: constraints.txt  hatch-constraints.txt  labeler.yml  release-dev.yml  release.yml  tests.yml
docs/: conf.py  index.md  index.rst  requirements.txt  usage.md  usage.rst
src/human_readable/: __init__.py  files.py  i18n.py  lists.py  numbers.py  times.py
src/human_readable/locale/de_DE/LC_MESSAGES/: human_readable.mo  human_readable.po  humanize.po
src/human_readable/locale/en_ABBR/LC_MESSAGES/: human_readable.mo  human_readable.po  humanize.po
src/human_readable/locale/es_ES/LC_MESSAGES/: human_readable.mo  human_readable.po  humanize.po
src/human_readable/locale/fa_IR/LC_MESSAGES/: human_readable.mo  human_readable.po  humanize.po
src/human_readable/locale/fi_FI/LC_MESSAGES/: human_readable.mo  human_readable.po  humanize.mo  humanize.po
src/human_readable/locale/fr_FR/LC_MESSAGES/: human_readable.mo  human_readable.po  humanize.po
src/human_readable/locale/id_ID/LC_MESSAGES/: human_readable.mo  human_readable.po  humanize.mo  humanize.po
src/human_readable/locale/it_IT/LC_MESSAGES/: human_readable.mo  human_readable.po  humanize.mo  humanize.po
src/human_readable/locale/ja_JP/LC_MESSAGES/: human_readable.mo  human_readable.po  humanize.po
src/human_readable/locale/ko_KR/LC_MESSAGES/: human_readable.mo  human_readable.po  humanize.mo  humanize.po
src/human_readable/locale/nl_NL/LC_MESSAGES/: human_readable.mo  human_readable.po  humanize.po
src/human_readable/locale/pl_PL/LC_MESSAGES/: human_readable.mo  human_readable.po  humanize.mo  humanize.po
src/human_readable/locale/pt_BR/LC_MESSAGES/: human_readable.mo  human_readable.po  humanize.mo  humanize.po
src/human_readable/locale/pt_PT/LC_MESSAGES/: human_readable.mo  human_readable.po  humanize.mo  humanize.po
src/human_readable/locale/ru_RU/LC_MESSAGES/: human_readable.mo  human_readable.po  humanize.po
src/human_readable/locale/sk_SK/LC_MESSAGES/: human_readable.mo  human_readable.po  humanize.mo  humanize.po
src/human_readable/locale/tr_TR/LC_MESSAGES/: human_readable.mo  human_readable.po  humanize.po
src/human_readable/locale/uk_UA/LC_MESSAGES/: human_readable.mo  human_readable.po  humanize.mo  humanize.po
src/human_readable/locale/vi_VI/LC_MESSAGES/: human_readable.mo  human_readable.po  humanize.mo  humanize.po
src/human_readable/locale/zh_CN/LC_MESSAGES/: human_readable.mo  human_readable.po  humanize.po
src/human_readable/locale/zh_TW/LC_MESSAGES/: human_readable.mo  human_readable.po  humanize.po
tests/: __init__.py  test_files.py  test_i18n.py  test_lists.py  test_numbers.py  test_times.py
tests/functional/: conftest.py
tests/functional/en_ABBR/: __init__.py  test_numbers.py  test_times.py
tests/functional/fr_FR/: __init__.py  test_numbers.py
tests/functional/pt_BR/: __init__.py  test_numbers.py  test_times.py
tests/functional/ru_RU/: __init__.py  test_numbers.py  test_times.py
tests/unit/: test_files.py  test_i18n.py  test_lists.py  test_numbers.py  test_times.py
