[project]
name = "human-readable"
version = "1.4.1"
description = "Human Readable"
authors = [
  { name = "staticdev", email = "staticdev-support@proton.me"}
]
license = {text = "MIT"}
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.9"
dependencies = []

[dependency-groups]
dev = [
    "nox>=2024.10.9",
]

[project.urls]
homepage = "https://github.com/staticdev/human-readable"
repository = "https://github.com/staticdev/human-readable"
documentation = "https://human-readable.readthedocs.io"
changelog = "https://github.com/staticdev/human-readable/releases"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["human_readable", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.ruff]
line-length = 80

[tool.ruff.lint]
select = ["B", "B9", "C", "D", "E", "F", "N", "W"]
ignore = ["E203", "E501", "B905"]
per-file-ignores = { "times.py" = ["N806"] }

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
force-single-line = true
lines-after-imports = 2

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[[tool.mypy.overrides]]
module = ["pytest_mock"]
ignore_missing_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
